--- a/WebSite/templates/order.html
+++ b/WebSite/templates/order.html
@@ -6,6 +6,11 @@
 {% block main %}
 <div class="container mt-5">
     <h2>Оформление заказа</h2>
+    {% if message %}
+        <div class="alert alert-success">
+            {{ message }}
+    </div>
+    {% endif %}
     <form method="post">
         {% csrf_token %}
 
@@ -38,6 +43,25 @@
 
         <button type="submit" class="btn btn-primary">Подтвердить заказ</button>
     </form>
+
+    <form method="get" class="form-inline mb-3">
+            <div class="form-group mr-2">
+                <input type="text" name="email" value="{{ request.GET.email }}" class="form-control" placeholder="Поиск по email">
+            </div>
+            <div class="form-group mr-2">
+                <input type="text" name="customer_name" value="{{ request.GET.customer_name }}" class="form-control" placeholder="Поиск по имени">
+            </div>
+            <div class="form-group mr-2">
+                <select name="sort" class="form-control">
+                    <option value="-created_at" {% if request.GET.sort == "-created_at" %}selected{% endif %}>Новые сверху</option>
+                    <option value="created_at" {% if request.GET.sort == "created_at" %}selected{% endif %}>Старые сверху</option>
+                    <option value="-price" {% if request.GET.sort == "-price" %}selected{% endif %}>По убыванию цены</option>
+                    <option value="price" {% if request.GET.sort == "price" %}selected{% endif %}>По возрастанию цены</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-secondary">Фильтровать</button>
+        </form>
+
 
     <div class="mt-5">
         <h3>История заказов</h3>
